# Business_Data_Management_EDHEC_2026_DIOR

./: .env.example  .gitignore  Dior_Data_Management.ipynb  Makefile  README.md  group_project_26.ipynb  main.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  setup.sh  test_scrapers.py
Dior_assignment_project/: .gitignore  Dockerfile  Makefile  bigquery_io.py  dior_scraper.py  rebag_scraper.py  requirements.txt  vestiaire_scraper.py
api/: main.py
docker/: Dockerfile  docker-compose.yml
src/analytics/: currency.py  matching.py  normalization.py
src/automation/: scheduler.py
src/database/: bigquery.py
src/scrapers/: dior.py  rebag.py  vestaire.py  vestiaire.py
tests/: README.md  test_api_endpoints.py  test_main.py  test_pipeline_imports.py
